Wrap correctly selector

--- a/src/less/components/buttons_area.less
+++ b/src/less/components/buttons_area.less
@@ -84,7 +84,8 @@
 				background-color: #ffffff18;
 			}
 
-			&:hover, &:focus-visible {
+			&:hover,
+			&:focus-visible {
 				@color-opacity: 0.05;
 				background-image: linear-gradient(
 						to bottom,
